--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier --write **/**/*.{js,json}"
+    "format": "prettier --write **/**/*.{js,json,css}"
   },
   "eslintConfig": {
     "extends": [
